<resources>
    <string name="app_name">Hello</string>
    <string name="strTxt1">니코틴 의존도 평가를 위해\n 다음 질문에 답해주세요.</string>
    <string name="strTxt2">1.아침에 일어나서 얼마 만에 첫 담배를 피우십니까?</string>
    <string name="strTxt3">2.지하철, 버스, 병원, 영화관 등과 같은 금연구역에서 흡연 욕구를 참는 것이 어렵나요?</string>
    <string name="strTxt4">3.가장 포기하기 싫은 담배, 다시 말해 가장 좋아하는 담배는 어떤 것 입니까?</string>
    <string name="strTxt5">4.하루에 담배를 몇 개비나 피우십니까?</string>
    <string name="strTxt6">5.깨어나서 처음 몇 시간 피우는 흡연량이 하루의 다른 때보다 더 많습니까?</string>
    <string name="strTxt7">6.아파서 거의 하루 종일 누워있거나, 감기나 독감에 걸려 호흡이 곤란할 때에도 담배를 피우십니까?</string>

    <string name="strTxt8">  금연 도움을 위해 흡연 정보를 입력해주세요. </string>

    <string name="strTxt11">흡연 정보 수집을 위한 질문입니다. \n [매우그렇지않다: 1, 대체로그렇지않다: 2,\n 보통이다: 3, 대체로그렇다: 4, 매우그렇다: 5 ]를 기준으로 선택하세요. </string>
    <string name="strTxt12">1.담배가 나에게 미치는 영향에 대해 생각해 보았다.</string>
    <string name="strTxt13">2.나는 금연의 긍정적 효과가 흡연보다 훨씬 크다는 것을 알고 있다.</string>
    <string name="strTxt14">3.나는 금연에 성공할 자원(방편)이 많다.</string>
    <string name="strTxt15">4.금연에 필요한 단계를 진행하고 싶다.</string>
    <string name="strTxt16">5.나는 나의 금연을 다른 사람들에게 알렸다.</string>
    <string name="strTxt17">6.금연을 위해 전문가의 도움을 받고 싶다.</string>
    <string name="strTxt18">7.나는 계속 담배를 피우는 것은 문제 되지 않는다고 생각한다.</string>
    <string name="strTxt19">8.나는 내 흡연 문제를 깊게 생각하지 않았다.</string>
    <string name="strTxt20">9.나는 흡연 문제로 인해 여러 가지 불편함을 느낀다.</string>
    <string name="strTxt21">10.나는 담배를 끊고 싶지 않다.</string>

    <string name="strTxt41">흡연 정보 수집을 위해 질문에 답해주세요.</string>

    <string name="strTxt42">1.평소 일주일 흡연량은 어떻게 되나요?</string>
    <string name="strTxt43">2.흡연 기간은 어떻게 되시나요?</string>
    <string name="strTxt44">3.주로 언제 흡연을 하시나요?</string>

    <string name="strTxt45">다음은 금연 경력에 관한 설문입니다.</string>
    <string name="strTxt46">4.몇 번의 금연시도를 해오셨나요?</string>
    <string name="strTxt47">5.어떤 금연 방법을 채택하셨나요?</string>
    <string name="strTxt48">6.금연 실패 이유는 무엇이라고 생각하시나요?</string>
    <string name="strTxt49">7.금연 중이라면 기간은 얼마나 되었나요?</string>
    <string name="strTxt50">8.금연 시도에 따른 신체적, 심리적 금단 증상이 있었나요?</string>
    <string name="strTxt51">9.주변에서 금연을 권장하거나 금연 소식을 알고 있었나요?</string>
    <string name="strTxt52">수고하셨습니다. 금연에 대한 태도나 각오를 적어주세요!</string>

    <string name="strTxt71">금연 계획서</string>
    <string name="strTxt72">1단계 금연 시작일 정하기 \n(생일, 기념일 등을 시작일로 정해 금연 동기 부여해요.)</string>
    <string name="strTxt73">2단계 주변에 금연 소식을 알리기 </string>
    <string name="strTxt74">3단계 금연 환경 조성하기 \n(담배, 재떨이 등 흡연과 관련된 모든 소지품을 없애요.)</string>
    <string name="strTxt75">4단계 흡연 유발 요인 피하기 \n(특히 재발의 흔한 원인인 술자리를 피해요.)</string>
    <string name="strTxt76">5단계 금연보조제 활용하기 \n(금연보조제 활용은 성공률을 2배 향상시켜요.)</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>